# audio-recorder

./: .gitignore  README.md  pyproject.toml  test_recording_vertex.py
specs/: audio-recorder.md  fix-audio-capture-mapping.md  fix-system-audio-capture.md
src/: __init__.py  audio_devices.py  audio_recorder.py  main.py  mp3_encoder.py
tests/: __init__.py  test_audio_devices.py  test_audio_recorder.py  test_mp3_encoder.py
