[project]
name = "audio-recorder"
version = "0.1.0"
description = "Enregistreur audio en continu pour PC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1",
    "pulsectl>=24.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
